# YAGNI-dates

./: README.md  meson.build  run
deploy/: yagni
deploy/assets/: german
yagni/assets/: english  japanese  portuguese
yagni/src/: date.h  language.h  main.c  small_string.h  utils.h
